Fix - page layout cutoff issue3

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -349,7 +349,7 @@
 
 .pg2-plot-lgeo {
   /* width: 90%; */
-  display: block;
+  display: inline-block;
   padding-top: 1%;
 }
 
@@ -361,7 +361,7 @@
 
 .pg3-plot-lgeo {
   /* width: 90%; */
-  display: block;
+  display: inline-block;
   padding-top: 1%;
 }
 
